--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.9",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
